--- a/src/app/display-ad/display-ad.component.html
+++ b/src/app/display-ad/display-ad.component.html
@@ -1,3 +1,25 @@
-<p>
-  display-ad works!
-</p>
+<div class="main-content" >
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="card">
+          <div class="header">
+            <h4 class="title">Create Display-Ad</h4>
+          </div>
+          <div class="content">
+            <h2>Enter Heading
+            <input type="text" id="title" style="width:100%"/></h2>
+            <br/>
+            <h2>Enter Sub Heading
+            <input type="text" id="subtitle" style="width:100%"/></h2>
+            <br/>
+            <h2>Enter Disclaimer
+            <input type="text" id="title" style="width:100%"/></h2>
+            <h2>Select image for Ad</h2>
+            <button type="submit" class="btn btn-default" (click)="uploadImages(formData)">Save</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
