--- a/src/app/display-ad/display-ad.component.html
+++ b/src/app/display-ad/display-ad.component.html
@@ -16,6 +16,7 @@
             <h2>Enter Disclaimer
             <input type="text" id="title" style="width:100%"/></h2>
             <h2>Select image for Ad</h2>
+            <image-upload></image-upload>
             <button type="submit" class="btn btn-default" (click)="uploadImages(formData)">Save</button>
           </div>
         </div>
