--- a/src/app/campaigns/campaigns.component.html
+++ b/src/app/campaigns/campaigns.component.html
@@ -2,38 +2,60 @@
   <div class="container-fluid">
       <div class="row">
           <div class="col-md-12">
-              <div class="card">
-                  <div class="header">
-                      <h4 class="title">Campaigns</h4>
-                  </div>
-                  <div class="content">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                              <th>Campaign Name</th>
-                              <th>Campaign Type</th>
-                              <th>Campaign Budget</th>
-                              <th>Expiry</th>
-                              <th>Status</th>
-                              <th>Actions</th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                              <tr>
-                                  <td>My Test Campaign</td>
-                                  <td>Display, Search</td>
-                                  <td>$5000</td>
-                                  <td>Never</td>
-                                  <td>Active</td>
-                                  <td><a href="/campaigns" (click)="updateCampaign()">Edit</a><br/><a href="/campaigns" (click)="deleteCampaign()">Delete</a></td>
-                                </tr>
-                          </tbody>
+            <button class="btn btn-default" type="button" data-toggle="modal" data-target="#myModal">Add New Campaign</button>
+            <br/><br/>
+            <div class="card">
+                <div class="header">
+                    <h4 class="title">Campaigns</h4>
+                </div>
+                <div class="content">
+                  <table class="table table-hover">
+                      <thead>
+                          <tr>
+                            <th>Campaign Name</th>
+                            <th>Campaign Type</th>
+                            <th>Campaign Budget</th>
+                            <th>Expiry</th>
+                            <th>Status</th>
+                            <th>Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            <tr (click)="rowClick()">
+                                <td>My Test Campaign</td>
+                                <td>Display, Search</td>
+                                <td>$5000</td>
+                                <td>Never</td>
+                                <td>Active</td>
+                                <td><a href="/campaigns" (click)="updateCampaign()">Edit</a><br/><a href="/campaigns" (click)="deleteCampaign()">Delete</a></td>
+                              </tr>
+                        </tbody>
+                  </table>
 
-                    </table>
-
-                  </div>
-              </div>
+                </div>
+            </div>
           </div>
+      </div>
+      <!-- Modal -->
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Create New Campaign</h4>
+            </div>
+            <div class="modal-body">
+              <p>Campaign form here...</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Save</button>
+            </div>
+          </div>
+
+        </div>
       </div>
   </div>
 </div>
