--- a/src/app/campaigns/campaigns.component.html
+++ b/src/app/campaigns/campaigns.component.html
@@ -2,63 +2,55 @@
   <div class="container-fluid">
       <div class="row">
           <div class="col-md-12">
-            <button class="btn btn-default" type="button" data-toggle="modal" data-target="#myModal">Add New Campaign</button>
+            <button class="btn btn-default" type="button" (click)="updateCampaign()" href="/updateCampaign">Add New Campaign</button>
             <br/><br/>
             <div class="card">
                 <div class="header">
                     <h4 class="title">Campaigns</h4>
                 </div>
                 <div class="content">
-                  <table class="table table-hover">
+                  <table class="table">
                       <thead>
                           <tr>
                             <th>Campaign Name</th>
                             <th>Campaign Type</th>
-                            <th>Campaign Budget</th>
-                            <th>Expiry</th>
-                            <th>Status</th>
-                            <th>Actions</th>
+                            <th></th>
                           </tr>
                         </thead>
                         <tbody>
-                            <tr (click)="rowClick()">
-                                <td>My Test Campaign</td>
-                                <td>Display, Search</td>
-                                <td>$5000</td>
-                                <td>Never</td>
-                                <td>Active</td>
-                                <td><a href="/campaigns" (click)="updateCampaign()">Edit</a><br/><a href="/campaigns" (click)="deleteCampaign()">Delete</a></td>
-                              </tr>
+                            <tr>
+                              <td><a href="/updateCampaign" (click)="updateCampaign()">My Test Campaign</a></td>
+                              <td>Display, Search</td>
+                              <td><a href="/campaigns" (click)="deleteCampaign()"><i class="pe-7s-trash"></i></a></td>
+                            </tr>
+                            <tr>
+                              <td><a href="/updateCampaign" (click)="updateCampaign()">Another Test Campaign</a></td>
+                              <td>Display</td>
+                              <td><a href="/campaigns" (click)="deleteCampaign()"><i class="pe-7s-trash"></i></a></td>
+                            </tr>
                         </tbody>
                   </table>
-
                 </div>
             </div>
           </div>
       </div>
-      <!-- Modal -->
-      <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-
-          <!-- Modal content-->
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Create New Campaign</h4>
-            </div>
-            <div class="modal-body">
-              <p>Campaign form here...</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Save</button>
-            </div>
-          </div>
-
-        </div>
-      </div>
   </div>
 </div>
+<style>
+  .fade-scale {
+    transform: scale(0);
+    opacity: 0;
+    -webkit-transition: all .25s linear;
+    -o-transition: all .25s linear;
+    transition: all .25s linear;
+  }
+
+  .fade-scale.in {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+</style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
