--- a/src/app/campaigns/campaigns.component.html
+++ b/src/app/campaigns/campaigns.component.html
@@ -19,30 +19,32 @@
                       <li><a href="/campaigns">Inactive</a></li>
                     </ul>
                   </div>
-                  <table class="table">
-                      <thead>
-                          <tr>
-                            <th>Campaign Name</th>
-                            <th>Campaign Type</th>
-                            <th>Advertiser</th>
-                            <th></th>
-                          </tr>
-                        </thead>
-                        <tbody>
+                  <div class="table-responsive">
+                    <table class="table">
+                        <thead>
                             <tr>
-                              <td><a href="/updateCampaign" (click)="updateCampaign()">My Test Campaign</a></td>
-                              <td>Display, Search</td>
-                              <td><a href="/updateCampaign" (click)="updateAdvertiser()">PaperJag</a></td>
-                              <td><a href="/campaigns" (click)="deleteCampaign()"><i class="pe-7s-trash"></i></a></td>
+                              <th>Campaign Name</th>
+                              <th>Campaign Type</th>
+                              <th>Start Date</th>
+                              <th>End Date</th>
                             </tr>
-                            <tr>
-                              <td><a href="/updateCampaign" (click)="updateCampaign()">Another Test Campaign</a></td>
-                              <td>Display</td>
-                              <td><a href="/updateCampaign" (click)="updateAdvertiser()">PaperJag</a></td>
-                              <td><a href="/campaigns" (click)="deleteCampaign()"><i class="pe-7s-trash"></i></a></td>
-                            </tr>
-                        </tbody>
-                  </table>
+                          </thead>
+                          <tbody>
+                              <tr>
+                                <td><a href="/updateCampaign" (click)="updateCampaign()">My Test Campaign</a></td>
+                                <td>Display, Search</td>
+                                <td><a href="/updateCampaign" (click)="updateAdvertiser()">07/20/2018</a></td>
+                                <td><a href="/updateCampaign" (click)="updateAdvertiser()">07/20/2019</a></td>
+                              </tr>
+                              <tr>
+                                <td><a href="/updateCampaign" (click)="updateCampaign()">Another Test Campaign</a></td>
+                                <td>Display</td>
+                                <td><a href="/updateCampaign" (click)="updateAdvertiser()">08/20/2018</a></td>
+                                <td><a href="/updateCampaign" (click)="updateAdvertiser()">07/20/2019</a></td>
+                              </tr>
+                          </tbody>
+                    </table>
+                  </div>
                 </div>
             </div>
           </div>
