--- a/src/app/update-campaign/update-campaign.component.html
+++ b/src/app/update-campaign/update-campaign.component.html
@@ -12,7 +12,7 @@
                                 <div class="col-md-8">
                                     <div class="form-group">
                                         <label>Campaign Name</label>
-                                        <input type="text" class="form-control" placeholder="Summer Sales Event" value="">
+                                        <input type="text" class="form-control"  value="">
                                     </div>
                                 </div>
                             </div>
