--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -6,13 +6,18 @@
                   <div class="header">
                       <h4 class="title">Users</h4>
                   </div>
+                  
                   <div class="content">
+                        <div>
+                                <button type="button" class="btn btn-primary" (click)="addUpdateUser('add',accounts[0]._id)">Add</button>
+                              </div>
                     <table class="table table-hover"> 
                         <thead>
                             <tr>
                               <th>User Name</th>
                               <th>Email</th>
                               <th>Access Type</th>
+                              <th></th>
                               <th></th>
                             </tr>
                           </thead>
@@ -21,7 +26,8 @@
                                   <td>{{ x.username }}</td>
                                   <td>{{ x.email }}</td>
                                   <td>{{ x.accesstype }}</td>
-                                  <td><a href="/user" (click)="updateUser()">Edit</a></td>
+                                  <td><a  (click)="addUpdateUser('update',x._id)">Edit</a></td>
+                                  <td><a  (click)="deleteUser(x._id)">Delete</a></td>
                                 </tr>
                           </tbody>
                       
